--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,5 @@ edition = "2024"
 [dependencies]
 ratatui = {version="0.30.0", features=["all-widgets"]}
 color-eyre = "0.6.5"
+serde_json = "1.0.148"
+serde = { version = "1.0.228", features = ["derive"] }
